--- a/config/storage.yml
+++ b/config/storage.yml
@@ -5,6 +5,11 @@ test:
 local:
   service: Disk
   root: <%= Rails.root.join("storage") %>
+ 
+amazon:
+ service: S3
+ region: ap-northeast-1
+ bucket: furima39326
 
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
